# bilibili-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
apify-actor/: .dockerignore  DEPLOY.md  Dockerfile  README.md  _smoke_test.py  make_icon.py  requirements.txt
apify-actor/.actor/: actor.json  pay_per_event.json
apify-actor/my_actor/: __main__.py  main.py
docs/superpowers/plans/: 2026-05-30-bilibili-mcp.md  2026-06-02-bilibili-mcp-v1.1.md
docs/superpowers/specs/: 2026-05-30-bilibili-mcp-design.md  2026-06-02-bilibili-mcp-v1.1-design.md
src/bilibili_mcp/: __init__.py  analyze.py  bili.py  format.py  server.py
tests/: test_analyze.py  test_format.py  test_live.py
