[project]
name = "bilibili-mcp"
version = "0.1.0"
description = "An MCP server that lets any AI client read public Bilibili data (video info, subtitles, search)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "bilibili-mcp contributors" }]
keywords = ["mcp", "model-context-protocol", "bilibili", "video", "subtitle", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.2.0",
    "bilibili-api-python>=16.0.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
bilibili-mcp = "bilibili_mcp.server:main"

[project.urls]
Homepage = "https://github.com/haotongliu58-sudo/bilibili-mcp"
Issues = "https://github.com/haotongliu58-sudo/bilibili-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bilibili_mcp"]
